show in full-screen

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,13 +2,15 @@
 <resources>
 
     <style name="LaunchTheme" parent="@android:style/Theme.Black.NoTitleBar">
-<!--        <item name="android:windowFullscreen">true</item>-->
         <item name="android:windowBackground">@drawable/app_splash</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="NormalTheme" parent="@android:style/Theme.Black.NoTitleBar">
-<!--        <item name="android:windowFullscreen">true</item>-->
         <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
 </resources>
